fix(supra): rectify the spacing between links

--- a/scss/_orange-navbar.scss
+++ b/scss/_orange-navbar.scss
@@ -16,7 +16,6 @@
 
   @include media-breakpoint-up(md) {
     display: flex;
-    
     .container {
       padding-left: 0;
     }
@@ -27,7 +26,7 @@
   }
 
   a {
-    margin-right: .313rem;
+    margin-right: .438rem;
   }
   a::before {
     bottom: -.438rem;
